# ischuu_app_

./: .env  .env.example  .gitignore  CAMBIOS_MOVIL.md  CORRECCIONES_MOVIL_V2.md  README.md  error_flet.txt  ischuu_cart_local.json  ischuu_pending_payment.json  ischuu_shipping_address.json  main.py  mobile_main.py  pyproject.toml  requirements.txt
app/: .gitignore  IschuuApp.spec  README.md  docker-compose.yml  mobile_main.py  requirements.txt
app/app/backend/: db.py  models.py  seed.py
app/backend/: db.py  dependencies.py  main.py  models.py  pricing.py  schemas.py  seed.py
app/backend/core/: config.py  security.py
app/backend/routers/: admin.py  auth.py  notifications.py  orders.py  password.py  payments.py  products.py
app/backend/services/: cart.py  catalog.py  checkout.py  exporter.py  preferences.py  pricing.py  push_notifications.py  shipping.py  transbank.py
app/docs/: API.md  BACKLOG_SCRUM.md  IMPLEMENTACION_Y_PRUEBAS.md
app/frontend/: config.py
app/frontend/controllers/: app_controller.py
app/frontend/data/: seed.py
app/frontend/models/: entities.py  state.py
app/frontend/services/: api_client.py
app/frontend/utils/: formatters.py
app/frontend/views/: admin.py  auth.py  cart.py  components.py  (+5 more)
app/models/: state.py
app/tests/: __init__.py
app/views/: components.py  orders.py  profile.py
docs/: API.md  IMPLEMENTACION_Y_PRUEBAS.md
scripts/: build_windows.ps1
tests/: test_admin_filters.py  test_cart_and_stock.py  test_checkout.py  test_notifications.py  test_preferences.py  test_pricing.py  test_security.py  test_shipping.py
(+20 files in other folders)
